Fixed login vertical alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -405,8 +405,9 @@ label[required]::after{
 
   .login-wrapper {
     position: absolute;
-    top: 20%;
+    top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 100%;
     z-index: 1;
 
